feat: complete frontend login/register with Thymeleaf SSR
- Add register.html with form submission to POST /page/register
- Fix SecurityConfig PUBLIC_PATHS: replace /page/** with explicit paths
- Add loginProcessingUrl(/page/login) to formLogin config
- Fix TenantInterceptor PUBLIC_ENDPOINTS: use /page/ prefix for startsWith
- Known issue: pure numeric password fails after server restart (tracked in Linear)